extends Button

func _on_pressed():
	get_tree().change_scene_to_file("res://Scenes/Levels/level_1.tscn")

func _on_level_2_pressed():
	get_tree().change_scene_to_file("res://Scenes/Levels/level_2.tscn")

func _on_level_3_pressed():
	get_tree().change_scene_to_file("res://Scenes/Levels/level_3.tscn")

func _on_level_4_pressed():
	get_tree().change_scene_to_file("res://Scenes/Levels/level_4.tscn")

func _on_level_5_pressed():
	get_tree().change_scene_to_file("res://Scenes/Levels/level_5.tscn")

func _on_level_6_pressed():
	get_tree().change_scene_to_file("res://Scenes/Levels/level_6.tscn")

func _on_level_7_pressed():
	get_tree().change_scene_to_file("res://Scenes/Levels/level_7.tscn")

func _on_level_8_pressed():
	get_tree().change_scene_to_file("res://Scenes/Levels/level_8.tscn")

func _on_level_9_pressed():
	get_tree().change_scene_to_file("res://Scenes/Levels/level_9.tscn")

func _on_level_10_pressed():
	get_tree().change_scene_to_file("res://Scenes/Levels/level_10.tscn")
